# sas-viya-machine-learning

./: .gitignore  SAS_Autoencoder_Properties.md  autoencoder_demo.ipynb  pyproject.toml
autoencoder/: .gitignore  DATA_EXPORT_README.md  DEMO_README.md  DEMO_SUMMARY.md  ENHANCED_TRAINING_README.md  EVALUATION_README.md  INFERENCE_README.md  MANIFEST.in  MNIST_DATA_README.md  MNIST_README.md  MODEL_IMPLEMENTATION_SUMMARY.md  TRAINING_FRAMEWORK_README.md  TRAINING_README.md  VISUALIZATION_README.md  __init__.py  autoencoder_model.py  checkpoints.py  data_loader.py  data_utils.py  datasets.py  demo_autoencoder.py  evaluation.py  evaluation_example.py  evaluator.py  example_data_export.py  example_enhanced_training.py  example_inference.py  example_usage.py  example_visualization.py  io_utils.py  metrics.py  mnist_data.py  model.py  model_io.py  model_utils.py  plot_utils.py  preprocessing.py  quick_model_test.py  requirements.txt  run_exact_tests.py  (+22 more)
autoencoder/configs/: default_config.yaml
autoencoder/data/: README.md
autoencoder/models/: README.md
autoencoder/scripts/: README.md
autoencoder/src/: __init__.py  inference.py
autoencoder/src/data/: __init__.py  mnist_loader.py  preprocessing.py
autoencoder/src/models/: __init__.py  autoencoder.py
autoencoder/src/scripts/: __init__.py  train_autoencoder.py
autoencoder/src/training/: __init__.py  metrics.py  trainer.py
autoencoder/src/utils/: __init__.py  checkpoints.py  device_utils.py  visualization.py
autoencoder/tests/: __init__.py  conftest.py
autoencoder/training/: __init__.py  evaluator.py  trainer.py
autoencoder/utils/: __init__.py  checkpointing.py  metrics.py  plot_utils.py
autoencoder/visualization/: __init__.py  analysis.py  plots.py  training_plots.py
docs/: conf.py  index.rst
examples/: __init__.py  evaluate_model.py
mnist_autoencoder/: README.md  __init__.py
mnist_autoencoder/data/: __init__.py  dataset.py  transforms.py
mnist_autoencoder/evaluation/: __init__.py
mnist_autoencoder/examples/: data_usage.py  quick_test.py  train_autoencoder.py
mnist_autoencoder/models/: __init__.py  autoencoder.py  utils.py
mnist_autoencoder/training/: README.md  __init__.py  trainer.py  utils.py
src/autoencoder/: __init__.py  evaluation.py  visualization.py
tests/: conftest.py  test_data.py  test_models.py  test_package.py  test_training.py
tests_properties/: README.md  __init__.py  test_architecture.py  test_output_transforms.py  test_preprocessing.py  test_runner.py  test_training.py
tests_properties_2/: __init__.py  test_architecture_compatibility.py  test_preprocessing_compatibility.py  test_training_compatibility.py
